Fix alignment issue add padding, margins
These were mostly finishing touching, everything became a lot more straight forward after adding that initial flex container. I used margin-left:auto to fix the alignment of the close button. The last things I did were adding padding so that the distribution was even.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,7 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  padding: 10px;
+  padding: 15px;
   display: flex;
 }
 
@@ -36,8 +36,16 @@ body {
   flex-shrink:0;
   align-items: center;
   justify-content: center;
-  margin:10px;
+  margin-right:15px;
 }
+
+.header-close {
+  display:flex;
+  font-size: 20px;
+  font-weight:bold;
+  padding-bottom:5px;
+}
+
 
 .close-button {
   background: #eee;
@@ -57,6 +65,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin-top:12px;
 }
 
 button.continue {
